--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,9 @@ serde_json = "1"
 directories = "5"
 clap = { version = "4", features = ["derive", "wrap_help", "color"] }
 owo-colors = "4"
+indicatif = "0.17"
+once_cell = "1"
+atty = "0.2"
 dotenvy = "0.15"
 aes-gcm = { version = "0.10", features = ["aes"] }
 aes = "0.8"
