removed some extra keywords

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.0.0"
 edition = "2024"
 description = "A secure cross-platform environment variable manager with CLI and optional GUI for encrypted storage of secrets and config."
 repository = "https://github.com/muhammad-fiaz/safehold"
-keywords = ["env-manager", "environment-variables", "credential-manager", "password-manager", "encryption", "cli", "gui", "rust"]
+keywords = ["env-manager", "credential-manager", "password-manager", "encryption", "cli"]
 categories = ["command-line-utilities", "cryptography", "gui"]
 license = "MIT"
 readme = "README.md"
