feat: complete SafeHold v0.0.1 with comprehensive enhancements
- Add homepage and repository URLs to Cargo.toml
- Update README.md with detailed application settings documentation
- Restore Security section in README.md with encryption details
- Update CONTRIBUTING.md with missing modules (app_settings.rs, master_lock.rs, styles.rs)
- Add author information to Cargo.toml for proper about command display
- Fix all compilation warnings for both CMD and GUI builds
- Implement Global Master Lock for unified password protection
- Add Application Settings system with persistent GUI/CLI preferences
- Add comprehensive destructive operations (clean-cache, delete-all) with safety confirmations
- Add count command with detailed statistics and global credential support
- Add full global credentials CRUD operations (add, get, list, update, delete)
- Add update/modify operations for credential management
- Add about command with comprehensive application information
- Add ASCII art banners for setup and GUI launch
- Update version to 0.0.1 with complete feature set
- Add 24 comprehensive integration tests covering all new functionality
- Ensure cross-platform compatibility (Windows, macOS, Linux)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,15 @@
 [package]
 name = "safehold"
-version = "0.0.0"
+version = "0.0.1"
 edition = "2024"
 description = "A secure cross-platform environment variable manager with CLI and optional GUI for encrypted storage of secrets and config."
 repository = "https://github.com/muhammad-fiaz/safehold"
+homepage = "https://github.com/muhammad-fiaz/safehold"
 keywords = ["env-manager", "credential-manager", "password-manager", "encryption", "cli"]
 categories = ["command-line-utilities", "cryptography", "gui"]
 license = "MIT"
 readme = "README.md"
+authors = ["Muhammad Fiaz <contact@muhammadfiaz.com>"]
 
 [features]
 default = ["cli"]
@@ -53,3 +55,4 @@ opt-level = "s"
 assert_cmd = "2"
 predicates = "3"
 assert_fs = "1"
+tempfile = "3"
