--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,29 @@
 /target
+temp_test/
+test_upgrade/
+
+# Build artifacts
+/dist
+*.zip
+*.tar.gz
+*.tgz
+
+# Release binaries
+safehold-*
+*.exe
+safehold
+
+# OS specific files
+.DS_Store
+Thumbs.db
+
+# IDE files
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# Backup files
+*.backup
+*.bak
+*~
